--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
-                 android:icon="@drawable/shape_clicked"
+                 android:icon="@drawable/ic_baby_bottle_small"
                  android:supportsRtl="true"
                  android:name=".App"
                  android:theme="@style/AppTheme"
